[sprint1] content add

--- a/app/pug/layout.pug
+++ b/app/pug/layout.pug
@@ -28,25 +28,25 @@ html(lang='en')
 			nav.header__nav
 				ul
 					li
-						a(href="#about") About us
+						a(href="#about") Présentation
 					li
-						a(href="#values") Our values
+						a(href="#values") Témoignages
 					li
-						a(href="#projects") Projects
+						a(href="#projects") En photo
 					li
-						a(href="#teams") Our teams
+						a(href="#teams") News
 					li
 						a(href="#contact") Contact
 		.headerMobile.js-mobile-menu
 			ul
 				li
-					a.js-mobile-menu-item(href="#about") About us
+					a.js-mobile-menu-item(href="#about") Présentation
 				li
-					a.js-mobile-menu-item(href="#values") Our values
+					a.js-mobile-menu-item(href="#values") Témoignages
 				li
-					a.js-mobile-menu-item(href="#projects") Projects
+					a.js-mobile-menu-item(href="#projects") En photo
 				li
-					a.js-mobile-menu-item(href="#teams") Our teams
+					a.js-mobile-menu-item(href="#teams") News
 				li
 					a.js-mobile-menu-item(href="#contact") Contact
 
