--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -10,7 +10,7 @@ block content
 				source(media="(max-width: 480px)" srcset="images/banner/banner-480.jpg")
 				img(src="images/banner/banner-1920.jpg" alt="banner image")
 		.banner__text
-			p Invest in our Property Development Fund.
+			p Location de voiture avec chauffeur &amp; guide accompagnateur
 			.js-open-popin-item
 				a.btn(href="#") Find how
 				.js-popin-details.sr-only
@@ -34,69 +34,66 @@ block content
 
 	.section.first
 		.section__content
-			h2.topTitle Type of Investment Fund
-			p Madagascar trsm (BPPDF) will be a protected cell fund company investing in property development projects on the beautiful island of Mauritius that will be a registered investment vehicle in Seychelles regulated by the FSA.
-			a.btn(href="/type-of-investment-fund") Learn more
-
-	.section.section--dark
-		.bannerInfo.section__content
-			.bannerInfo__item
-				i.fa.fa-thumbs-up
-				p.bannerInfo__status 0%
-				p.bannerInfo__desc Tax on Income
-			.bannerInfo__item
-				i.fa.fa-thumbs-up
-				p.bannerInfo__status Minimum 5% ROI
-				p.bannerInfo__desc ROI
-			.bannerInfo__item
-				i.fa.fa-thumbs-up
-				p.bannerInfo__status No
-				p.bannerInfo__desc Exchange Controls
-			.bannerInfo__item
-				i.fa.fa-thumbs-up
-				p.bannerInfo__status No
-				p.bannerInfo__desc Capital Gains Tax
-
-	//- .section
-	//- 	.section__content
-	//- 		h2 Protected Cell Company (PCC)
-	//- 		p The PCC structure ensures that assets are segregated into different cells within that company, with a view to protect each cell from any extension of liabilities from one cell to the other. The structure is easy to manage with one board for the whole structure and advisory committee to each cell. It is also a cost efficient structure with one administrator, one audit firm and one company secretary.
-	//- 		a.btn(href="/protected-cell-company") Learn more
-	
-	.section#values
-		.section__content
-			h2.section__title Our Mission Statement
-			h3.section__subtitle You are not just investing for a return, you are investing in our trust, passion and commitment to deliver. It is our investment in the right team of people and projects that guarantee success. Come and be part of our family and grow with us.
+			h2.section__title Visiter Madagascar avec nous
+			h3.section__subtitle Un voyage en toute sécurité et satisfaction avec nos chauffeurs professionnels expérimentés
+			//- h3.section__subtitle Pour vous faire découvrir et voyager à Madagascar en toute sérénité et confiance. De chauffeurs guides de référence expérimentés et disponibles pour votre voyage et visite dans toutes les régions de la grande île.
+			//- h3.section__subtitle Harris Madatour met à votre disposition des voitures régulièrement bien entretenues avec chauffeurs francophones et expérimentés, adaptées à votre confort et à tout type de budget. 
 			.textBox.section__content
 				.textBox__item
 					.item__header
-						h4 Transparency
+						h4 Épanouissante
 					.item__text
-						p Integrity and honesty is one of our main core values. Our aim is to deliver what we say we will do.
+						p Un pays extraordinaire, Madagascar recèle une population accueillante, vivant jusqu’à aujourd’hui dans l’ultime respect d’autrui. Une population née d’une fusion des premiers arrivés sur l’île à l’époque de sa découverte
 				.textBox__item
 					.item__header
-						h4 Conflict free
+						h4 Abordable
 					.item__text
-						p The needs of our investors come first. We are beholden to no, individual, institution or entity other than our investors.
+						p Une référence en termes de location de voiture avec chauffeur guide accompagnateur, Harris Madatour vous offre le plaisir de visiter tout Madagascar à tarif abordable. Offrez-vous un séjour personnalisé et à votre rythme.
 				.textBox__item
 					.item__header
-						h4 Expertise
+						h4 Sécurité assurée
 					.item__text
-						p We demand excellence, our Executive Board are engulfed with knowledge and experience and we continuously invest in the development of skills and education for our staff.
-				.textBox__item
-					.item__header
-						h4 Innovation
-					.item__text
-						p We continuously invest in technology ensuring that our solutions are cutting-edge.
-				.textBox__item
-					.item__header
-						h4 Accountability
-					.item__text
-						p We strive to honour commitments that we make and take responsibility to deliver with the highest quality possible.
-					
+						p Notre devise est votre satisfaction et votre sécurité, avant tout. Avec Harris Madatour, visiter Madagascar en toute sécurité ! Nous disposons à notre actif plusieurs véhicules adaptés pour tous types de voyages et de terrains
+				
+	//- .section.section--dark
+	//- 	.bannerInfo.section__content
+	//- 		.bannerInfo__item
+	//- 			i.fa.fa-handshake-o
+	//- 			p.bannerInfo__status Rencontre humainement riche
+	//- 		.bannerInfo__item
+	//- 			i.fa.fa-eur
+	//- 			p.bannerInfo__status Tarif adapté à tout budget
+	//- 		.bannerInfo__item
+	//- 			i.fa.fa-shield
+	//- 			p.bannerInfo__status Sécurité et satisfaction
+				
+	
+	//- .section#values
+	//- 	.section__content
+	//- 		h2.section__title Notre mission
+	//- 		h3.section__subtitle Harris Madatour met à votre disposition des voitures régulièrement bien entretenues avec chauffeurs francophones et expérimentés, adaptées à votre confort et à tout type de budget. 
+	//- 		.textBox.section__content
+	//- 			.textBox__item
+	//- 				.item__header
+	//- 					h4 Épanouissante
+	//- 				.item__text
+	//- 					p Un pays extraordinaire, Madagascar recèle une population accueillante, vivant jusqu’à aujourd’hui dans l’ultime respect d’autrui. Une population née d’une fusion des premiers arrivés sur l’île à l’époque de sa découverte
+	//- 			.textBox__item
+	//- 				.item__header
+	//- 					h4 Abordable
+	//- 				.item__text
+	//- 					p Une référence en termes de location de voiture avec chauffeur guide accompagnateur, Harris Madatour vous offre le plaisir de visiter tout Madagascar à tarif abordable. Offrez-vous un séjour personnalisé et à votre rythme.
+	//- 			.textBox__item
+	//- 				.item__header
+	//- 					h4 Sécurité assurée
+	//- 				.item__text
+	//- 					p Notre devise est votre satisfaction et votre sécurité, avant tout. Avec Harris Madatour, visiter Madagascar en toute sécurité ! Nous disposons à notre actif plusieurs véhicules adaptés pour tous types de voyages et de terrains
+				
 
 	.section
 		.details.section__content
+			h2.section__title Pourquoi Madagascar?
+			h3.section__subtitle Pour vous faire découvrir et voyager à Madagascar en toute sérénité et confiance. De chauffeurs guides de référence expérimentés et disponibles pour votre voyage et visite dans toutes les régions de la grande île.
 			.details__item
 				.details__image
 					img.thumbnail(src="images/about/seychelles.jpg" width="500" height="300"  alt="image")
